--- a/src/pages/includes.html
+++ b/src/pages/includes.html
@@ -449,12 +449,9 @@
         if (!confirm("Are you sure you want to delete this include?")) return;
 
         try {
-          const res = await fetch(
-            `${API_BASE}/api/Includes/DeleteInclude/${id}`,
-            {
-              method: "DELETE",
-            }
-          );
+          const res = await fetch(`/api/Includes/DeleteInclude/${id}`, {
+            method: "DELETE",
+          });
 
           const data = await res.json();
           if (res.ok && data.succeeded) {
