testing the logo

--- a/src/pages/categories.html
+++ b/src/pages/categories.html
@@ -13,9 +13,7 @@
       <!-- Sidebar -->
       <aside class="w-64 bg-white border-r shadow-md">
         <div class="p-6 border-b">
-          <h2 class="text-2xl font-bold text-blue-600 text-center">
-            Tour Admin
-          </h2>
+          <img src="../img/Vector.png" alt="main logo" />
         </div>
         <nav class="p-4 space-y-3">
           <a
