update the logo

--- a/src/pages/includes.html
+++ b/src/pages/includes.html
@@ -12,7 +12,7 @@
     <div class="flex min-h-screen">
       <!-- Sidebar -->
       <aside class="w-64 bg-white border-r shadow-md">
-        <div class="p-6 border-b">
+        <div class="p-6 flex items-center justify-center">
           <img src="../img/Vector.png" alt="main logo" />
         </div>
         </div>
