--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <body class="bg-gray-100 flex items-center justify-center min-h-screen">
     <div class="bg-white shadow-2xl rounded-2xl w-full max-w-md p-8">
       <div class="text-center mb-6">
-        <div class="p-6 border-b">
+        <div class="p-6 flex items-center justify-center">
           <img src="../img/Vector.png" alt="main logo" />
         </div>
         <p class="text-sm text-gray-500">Sign in to manage tours and guides</p>
