--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -315,7 +315,7 @@
     <script>
       lucide.createIcons();
       const baseUrl =
-        "https://tourguidehurghda.runasp.net/api/Trip/GetAllTrips";
+        "/api/Trip/GetAllTrips";
       const tripTable = document.getElementById("tripTable");
       let currentPage = 1;
       const pageSize = 8;
@@ -415,7 +415,7 @@
 
         try {
           const response = await fetch(
-            "https://tourguidehurghda.runasp.net/api/Activity/GetAllActivities"
+            "/api/Activity/GetAllActivities"
           );
           const result = await response.json();
           const activities = result.data?.data || [];
@@ -440,7 +440,7 @@
 
         try {
           const response = await fetch(
-            "https://tourguidehurghda.runasp.net/api/Language/GetAllLanguages"
+            "/api/Language/GetAllLanguages"
           );
           const result = await response.json();
           const languages = result?.data || [];
@@ -464,7 +464,7 @@
 
         try {
           const response = await fetch(
-            "https://tourguidehurghda.runasp.net/api/Category/GetAllCategories"
+            "/api/Category/GetAllCategories"
           );
           const result = await response.json();
           const categories = result.data?.data || [];
@@ -499,7 +499,7 @@
 
         try {
           const response = await fetch(
-            "https://tourguidehurghda.runasp.net/api/Includes/GetAllIncludes"
+            "/api/Includes/GetAllIncludes"
           );
           const result = await response.json();
           allIncludes = result.data?.data || [];
