test Show Modaal

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -10,6 +10,9 @@
       href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
+    <script>       let choicesActivities, choicesLanguages, choicesCategory, choicesIncludes, choicesNotIncludes;
+    </script>
+
 
     <title>Tour Guide Admin Panel</title>
   </head>
@@ -219,7 +222,6 @@
   
 
     <script>
-      let choicesActivities, choicesLanguages, choicesCategory, choicesIncludes, choicesNotIncludes;
 
       lucide.createIcons();
       const baseUrl =
