--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
     <title>Tour Guide Admin Panel</title>
-    <script src="trip-page.js"></script>
+    <script src="/src/js/trip-page.js"></script>
   </head>
   <body class="bg-gray-50 text-gray-800 font-sans">
     <div class="flex min-h-screen">
