--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -266,17 +266,21 @@ async function populateSelect(id, url, valueField, labelField) {
 
   const res = await fetch(url);
   const result = await res.json();
-  const data = result.data?.data || [];
 
-  const mapped = data.map((item) => ({
+  if (!Array.isArray(result.data)) {
+    console.error(`Invalid data for ${id}`, result.data);
+    return;
+  }
+
+  const mapped = result.data.map((item) => ({
     value: item[valueField],
-    label: item[labelField]
+    label: item[labelField],
   }));
 
   choices.setChoices(mapped, "value", "label", true);
-
-  return { element, choices, data };
+  return { element, choices, data: result.data };
 }
+
 
 
 // === Languages (for translations) ===
